[package]
name = "gridborg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gridborg_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
paste = { version = "1.0.15" }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_plain = "1.0.2"